# pwm

./: .gitignore  .readthedocs.yaml  BUILD.md  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  buildozer.spec  codecov.yml  kivy-ios.sh  pyinstaller.spec  pyproject.toml  run_gui.py  setup.cfg  setup.py
.github/workflows/: docs.yml  tests.yml
app/: __init__.py  main.py
app/kv/: __init__.py  pwm.kv
app/screens/: __init__.py
docs/source/: changelog.rst  cli_reference.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst  security.rst
docs/source/_static/: custom.css
docs/source/api/: constants.rst  crypto.rst  exceptions.rst  generator.rst  index.rst  models.rst  vault.rst
pwm/: __init__.py  __main__.py  _version.py
pwm/cli/: __init__.py  commands.py
pwm/config/: __init__.py
pwm/core/: __init__.py  constants.py  crypto.py  exceptions.py  models.py  vault.py
pwm/test/: __init__.py  test_crypto.py  test_generator.py  test_vault.py
pwm/utils/: __init__.py  clipboard.py  generator.py
pwm_platform/: __init__.py  android.py  base.py  desktop.py
site/en/tutorials/quickstart/: beginner.ipynb
