[metadata]
name = pwm
version = attr: pwm._version.__version__
description = A secure, local CLI password manager with AES-256-GCM encryption
long_description = file: README.md
long_description_content_type = text/markdown
author = PWM
license = MIT
license_files = LICENSE
url = https://github.com/py2u/pwm
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Environment :: X11 Applications
    Intended Audience :: End Users/Desktop
    Operating System :: OS Independent
    Operating System :: Android
    Operating System :: iOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security :: Cryptography
    Topic :: Utilities

[options]
python_requires = >=3.8
packages =
    app
    app.kv
    app.screens
    pwm
    pwm.cli
    pwm.config
    pwm.core
    pwm.utils
    pwm_platform
py_modules =
    run_gui
include_package_data = True
install_requires =
    cryptography>=41.0.0

[options.package_data]
app.kv =
    *.kv

[options.entry_points]
console_scripts =
    pwm = pwm.__main__:main
    pwm-gui = run_gui:main

[options.extras_require]
gui =
    kivy>=2.2.0
    plyer

mobile =
    kivy>=2.2.0
    plyer
    pyjnius

dev =
    pytest
    pytest-cov
    sphinx
    sphinx-rtd-theme
    pyinstaller
